# tabi-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  MQTT_AUTH.md  Makefile  README.md  SIMPLE_MQTT_SETUP.md  WINDOWS_USAGE.md  config.json  create-mqtt-user.sh  dev.bat  docker-compose.yml  mosquitto_acl  run.sh  tabi  tabi.bat  tabi.ps1
mosquitto/config/: mosquitto.conf
scripts/: README.md  build.bat  build.sh  run.bat  run.sh
src/: main.rs
src/config/: settings.rs
src/errors/: app_error.rs
src/handlers/: blinds.rs  health.rs  info.rs  mod.rs
src/models/: blind.rs  mod.rs  responses.rs
src/services/: blind_service.rs  mod.rs  mqtt_service.rs
