[package]
name = "tabi-backend"
version = "0.1.0"
edition = "2021"



[dependencies]
actix-web = { version = "4", features = ["macros"] }
rumqttc   = { version = "0.23" }
tokio = { version = "1.48.0", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenvy  = "0.15"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.0"
